--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@apollo/client": "^3.3.15",
     "@baronha/react-native-multiple-image-picker": "^0.2.9",
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/datetimepicker": "^3.4.6",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -27,7 +30,10 @@
     "react-native-screens": "^3.1.0",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
