--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-screens": "^3.1.0",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
+    "react-number-format": "^4.5.5",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
