--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/datetimepicker": "^3.4.6",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.4.1",
+    "@react-native-firebase/messaging": "^11.4.1",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -26,11 +28,11 @@
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal-datetime-picker": "^9.2.1",
+    "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-slider": "^0.11.0",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-number-format": "^4.5.5",
