--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,4 +28,4 @@ android.enableJetifier=true
 FLIPPER_VERSION=0.75.1
 
 #Config JDK
-org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_251
+# org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_251
